# zenflate

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  FEEDBACK.md  LICENSE  README.crates.md  README.md  UPSTREAM-AUDIT.md  justfile
.github/workflows/: ci.yml  fuzz.yml  miri.yml
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
benches/: corpus.rs  throughput.rs
benchmarks/: README.md  avx512_checksum_ab_2026-07-13.md  deflate_rust_ecosystem_2026-07-13.md  image_deflate_corpus_2026-06-18.txt  image_deflate_safe_vs_unchecked_2026-06-18.txt  rd_sweep_train1_2026-07-13.csv  throughput_interleaved_2026-06-18.txt  zenflate_vs_zlibrs_2026-06-13.md  zlib_rs_compare_2026-06-18.txt
benchmarks/harnesses/: cksum-ab.rs  perf-refresh.rs  pipe-ab.rs
docs/: flate2-backend.md  image-deflate-corpus.md
docs/public-api/: ABLATION-zenflate.md  zenflate.features.txt  zenflate.internal.txt  zenflate.txt
examples/: heap_c.rs  heap_compare.rs  heap_zen.rs  image_deflate_corpus.rs  monotonicity_bench.rs  profile_compress.rs  profile_full_optimal.rs  ratio_bench.rs  rd_sweep.rs  strategy_bench.rs  zlib_rs_ratio.rs
fuzz/: Cargo.toml  deflate.dict
fuzz/fuzz_targets/: fuzz_decompress.rs  fuzz_roundtrip.rs
fuzz/regression/: README.md
src/: constants.rs  error.rs  fast_bytes.rs  lib.rs
src/checksum/: adler32.rs  crc32.rs  mod.rs  tables.rs
src/compress/: bitstream.rs  block.rs  block_split.rs  full_optimal.rs  huffman.rs  katajainen.rs  mod.rs  near_optimal.rs  sequences.rs
src/decompress/: mod.rs  streaming.rs
src/matchfinder/: bt.rs  fast_ht.rs  hc.rs  ht.rs  mod.rs  raw.rs  turbo.rs
tests/: fuzz_regression.rs  public_api_doc.rs
