[package]
name = "zenflate"
version = "0.3.2"
edition = "2024"
rust-version = "1.89"
description = "Pure Rust DEFLATE/zlib/gzip compression and decompression"
license = "AGPL-3.0-only"
repository = "https://github.com/imazen/zenflate"
categories = ["compression"]
keywords = ["deflate", "zlib", "gzip", "compression", "decompression"]
exclude = [
    ".github/",
    "CLAUDE.md",
    "FEEDBACK.md",
    "Dockerfile",
    "justfile",
    "examples/heap_*.rs",
    "examples/profile_compress.rs",
]

[features]
default = ["std", "avx512"]
std = ["alloc", "archmage/std"]
alloc = []
avx512 = ["archmage/avx512"]
unchecked = []

[dependencies]
archmage = { version = "0.9.12", default-features = false, features = ["macros"] }
enough = { version = "0.4.2", default-features = false }
libm = "0.2.16"


[dev-dependencies]
criterion = { version = "0.8", default-features = false }
libdeflater = "1.25"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
miniz_oxide = "0.9"
png = "0.18"
fdeflate = "0.3"
zlib-rs = "0.6"
crc32fast = "1"
simd-adler32 = "0.3"
codec-corpus = "1"

[profile.release]
debug = true

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "corpus"
harness = false
