[package]
name = "zenflate"
version = "0.3.4"
edition = "2024"
rust-version = "1.89"
description = "Pure Rust DEFLATE/zlib/gzip compression and decompression"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
repository = "https://github.com/imazen/zenflate"
categories = ["compression"]
keywords = ["deflate", "zlib", "gzip", "compression", "decompression"]
exclude = [
    ".github/",
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    "Cross.toml",
    "Cargo.toml.original.txt",
    "Dockerfile",
    "justfile",
    "examples/heap_*.rs",
    "examples/profile_compress.rs",
    "fuzz/",
]

[features]
default = ["std", "avx512", "threads"]
std = ["alloc", "archmage/std"]
alloc = []
avx512 = ["archmage/avx512"]
unchecked = []
## Enable `gzip_compress_parallel` and threaded tests.
## Disable for wasm32 runtimes without thread support.
threads = ["std"]

[dependencies]
archmage = { version = "0.9.15", default-features = false, features = ["macros"] }
enough = { version = "0.4.3", default-features = false }
libm = "0.2.16"


[dev-dependencies]
codec-corpus = "1"
crc32fast = "1"
fdeflate = "0.3"
miniz_oxide = "0.9"
png = "0.18"
simd-adler32 = "0.3"

# Comparison benchmarks and bench harness — native only.
# libdeflate-sys requires C compilation (needs WASI SDK for wasm32).
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
zenbench = { version = "0.1.2", features = ["criterion-compat"] }
libdeflater = "1.25"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
zlib-rs = "0.6"

[profile.release]
debug = true

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "corpus"
harness = false

# Local patches for wasm32 support (codec-corpus fd-lock fix, zenbench fs4 fix).
# Remove once these are published.
[patch.crates-io]
codec-corpus = { path = "/home/lilith/work/codec-corpus/crate" }
zenbench = { path = "/home/lilith/work/zen/zenbench" }
