[package]
name = "zenflate"
version = "0.4.0"
edition = "2024"
rust-version = "1.89"
description = "Pure Rust DEFLATE/zlib/gzip compression and decompression"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
repository = "https://github.com/imazen/zenflate"
categories = ["compression"]
keywords = ["deflate", "zlib", "gzip", "compression", "decompression"]
readme = "README.crates.md"
exclude = [
    ".github/",
    ".gitignore",
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    "UPSTREAM-AUDIT.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    "Cross.toml",
    "Cargo.toml.original.txt",
    "Dockerfile",
    "justfile",
    "benches/",
    "docs/",
    "tests/",
    "examples/heap_*.rs",
    "examples/profile_compress.rs",
    "fuzz/",
]

[features]
default = ["std", "simd", "avx512", "threads", "compress"]
std = ["alloc", "archmage?/std"]
alloc = []
## Compression support (Compressor, CompressionLevel, CompressorSnapshot).
## Decompression and checksums are always available; disable this feature
## for a decode-only build.
compress = ["alloc"]
## Runtime-dispatched SIMD (checksums, matchfinder multiversioning) via
## archmage. Disable for scalar-only paths and a smaller dependency tree
## (drops the proc-macro chain).
simd = ["dep:archmage"]
## Wider AVX-512 checksum paths (implies simd).
avx512 = ["simd", "archmage/avx512"]
unchecked = []
## Enable `gzip_compress_parallel` and threaded tests.
## Disable for wasm32 runtimes without thread support.
threads = ["std", "compress"]

[dependencies]
archmage = { version = "0.9.15", default-features = false, features = ["macros"], optional = true }
enough = { version = "0.4.3", default-features = false }
libm = "0.2.16"


[dev-dependencies]
codec-corpus = "1"
crc32fast = "1"
zenutils-fuzz = "0.1.0"
fdeflate = "0.3"
miniz_oxide = "0.9"
png = "0.18"
simd-adler32 = "0.3"

# Comparison benchmarks and bench harness — native only.
# libdeflate-sys requires C compilation (needs WASI SDK for wasm32).
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
zenbench = { version = "0.1.2", features = ["criterion-compat"] }
libdeflater = "1.25"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
zlib-rs = "0.6"

[profile.release]
debug = true

[[bench]]
name = "throughput"
harness = false
required-features = ["compress"]

[[bench]]
name = "corpus"
harness = false
required-features = ["compress"]

# All examples exercise compression; skip them in decode-only builds.
[[example]]
name = "heap_compare"
required-features = ["compress"]

[[example]]
name = "heap_c"
required-features = ["compress"]

[[example]]
name = "heap_zen"
required-features = ["compress"]

[[example]]
name = "image_deflate_corpus"
required-features = ["compress"]

[[example]]
name = "monotonicity_bench"
required-features = ["compress"]

[[example]]
name = "profile_compress"
required-features = ["compress"]

[[example]]
name = "profile_full_optimal"
required-features = ["compress"]

[[example]]
name = "ratio_bench"
required-features = ["compress"]

[[example]]
name = "strategy_bench"
required-features = ["compress"]

[[example]]
name = "zlib_rs_ratio"
required-features = ["compress"]
